--- a/index.html
+++ b/index.html
@@ -32,21 +32,30 @@
 
 <!-- About Section -->
 <section id="about" class="container my-5">
-    <h2>About HunterMussel</h2>
-    <p>Welcome to HunterMussel, where we specialize in development and DevOps solutions. Our team is dedicated to delivering high-quality services to meet your business needs.</p>
+    <div class="about-content">
+        <h2>Discover HunterMussel</h2>
+        <p>Embark on a journey with HunterMussel, your destination for specialized development and DevOps solutions. Our passionate team is committed to providing top-notch services tailored to fulfill your unique business requirements.</p>
+    </div>
 </section>
 
 <!-- Services Section -->
 <section id="services" class="container my-5">
-    <h2>Our Services</h2>
-    <p>We offer a range of services in development and DevOps, tailored to optimize your workflow and enhance your software development process.</p>
+    <div class="services-content">
+        <h2>Discover Our Services</h2>
+        <p>Explore a spectrum of development and DevOps services meticulously designed to streamline your workflow and elevate your software development processes.</p>
+    </div>
 </section>
+
 
 <!-- Contact Section -->
 <section id="contact" class="container my-5">
-    <h2>Contact Us</h2>
-    <p>Get in touch with us to discuss how HunterMussel can contribute to the success of your projects. We look forward to hearing from you!</p>
-    <!-- Add a contact form or contact details here -->
+    <div class="contact-content">
+        <h2>Contact Us</h2>
+        <p>Reach out to us to explore how HunterMussel can enhance the success of your projects. We eagerly anticipate your inquiry!</p>
+    </div>
+    <div class="contact-details">
+        <!-- Add a contact form or contact details here -->
+    </div>
 </section>
 
 <!-- Bootstrap JS and dependencies -->
