--- a/index.html
+++ b/index.html
@@ -1,68 +1,263 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>HunterMussel</title>
-    <!-- Bootstrap CSS link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">HunterMussel</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#services">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
-            </li>
-        </ul>
+<html data-wf-site="528e651363ab10ec42000100" class="wf-lato-n1-active wf-lato-n3-active wf-lato-n4-active wf-lato-n7-active wf-lato-n9-active wf-daysone-n4-active wf-active"><head>
+    <meta charset="utf-8">
+    <title>Hunter Mussel| DevOps Engineer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/webflow.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://apis.google.com/_/scs/apps-static/_/js/k=oz.gapi.fr.jCj8c77aZ-I.O/m=plusone/rt=j/sv=1/d=1/ed=1/am=IQ/rs=AItRSTOyb9DFxJR-oLMIoD6azhb9yGuJ3Q/cb=gapi.loaded_0" async=""></script><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script><style type="text/css"></style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900%7CDays+One:regular"><script>
+      WebFont.load({
+        google: {
+          families: ["Lato:100,300,400,700,900", "Days One:regular"]
+        }
+      });
+    </script>
+    <script>
+      if (/mobile/i.test(navigator.userAgent)) document.documentElement.className += ' w-mobile';
+    </script>
+    <link rel="shortcut icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/528e651363ab10ec42000100/5297ae9b6614a1bf07000068_favicon.jpg">
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script><![endif]-->
+    <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/528e651363ab10ec42000100/5297ae946614a1bf07000067_webicon.png">
+  <script type="text/javascript" src="https://apis.google.com/js/plusone.js" gapi_processed="true"></script><meta name="chromesniffer" id="chromesniffer_meta" content="{&quot;GoogleFontApi&quot;:-1,&quot;jQuery&quot;:&quot;1.10.2&quot;,&quot;Plus1&quot;:-1}"><script type="text/javascript" src="chrome-extension://homgcnaoacgigpkkljjjekpignblkeae/detector.js"></script></head>
+  <body>
+    <div class="section header" id="page-nav-top">
+      <div class="w-row header">
+        <div class="w-col w-col-3 logo-bar">
+          <a class="w-inline-block logolink" href="#page-nav-top">
+            <div class="logo">HM</div>
+          </a>
+        </div>
+        <div class="w-col w-col-9 w-clearfix nav-bar">
+          <a class="w-inline-block headersocial" href="http://dribbble.com/#" target="_blank">
+            <img src="" alt="5297b5856614a1bf070000a2_dribbble.png">
+          </a>
+          <a class="w-inline-block headersocial" href="http://www.behance.net/#" target="_blank">
+            <img src="" alt="5297b30d6614a1bf0700009b_1385694988_37-behance.png">
+          </a>
+          <div class="followheader">
+            <div class="w-hidden-small w-hidden-tiny follow">FOLLOW ME</div>
+          </div>
+        </div>
+      </div>
+      <div class="w-container hero-text">
+        <h2>Hello, my name is Iago Mussel.</h2>
+        <h1>I am the DevOps Engineer</h1>
+      </div>
+      <div class="w-hidden-small w-hidden-tiny buttonalign"><a class="buttonhome button" href="#page-nav-portfolio">CHECK MY WORK</a><a class="button buttonhome danger" href="#page-nav-contact">Need urgent Support?</a>
+      </div>
+      <div class="w-hidden-small w-hidden-tiny arrowsectio">
+        <a class="w-hidden-tiny w-inline-block arrow" href="#page-nav-services"></a>
+      </div>
     </div>
-</nav>
-
-<!-- About Section -->
-<section id="about" class="container my-5">
-    <div class="about-content">
-        <h2>Discover HunterMussel</h2>
-        <p>Embark on a journey with HunterMussel, your destination for specialized development and DevOps solutions. Our passionate team is committed to providing top-notch services tailored to fulfill your unique business requirements.</p>
+    <div class="servicesdiv" id="page-nav-services">
+      <div class="w-container service-columns">
+        <div class="w-row">
+          <div class="w-col w-col-4 services">
+            <img class="icon" src="http://www.iago-Mussel.pt/images/web.png" alt="5294f94386b0d8d34b00010a_web.png">
+            <h3>Devops Consulting service</h3>
+            <div class="blueborder"></div>
+            <p>deployment of highly available systems with the integrity and security that the cloud can offer</p>
+          </div>
+          <div class="w-col w-col-4 services">
+            <img class="icon" src="http://www.iago-Mussel.pt/images/mobile.png" alt="529793b7b3b105747f00014d_mobile.png">
+            <h3>DevOps Migration</h3>
+            <div class="blueborder"></div>
+            <p> todo </p>
+          </div>
+          <div class="w-col w-col-4 services">
+            <img class="icon" src="http://www.iago-Mussel.pt/images/imac.png" alt="52d58e147aae7b1a25000048_imac.png">
+            <h3>Software development</h3>
+            <div class="blueborder"></div>
+            <p>We work with software and systems development, developing new features and resolving issues.</p>
+          </div>
+        </div>
+      </div>
+      <div class="servicesdiv">
+        <div class="servicesheader">I can create your amazing idea</div>
+        <div class="w-container blue-tag-center">
+          <div>
+            <div class="blueborder"></div>
+          </div>
+        </div>
+        <div class="w-container">
+          <div class="servicesblock">I love to bring awesome ideas to life for clients that have cool ideas. Making a career out of something that is creative, fun and rewarding for both me and my clients.</div>
+        </div>
+      </div>
     </div>
-</section>
-
-<!-- Services Section -->
-<section id="services" class="container my-5">
-    <div class="services-content">
-        <h2>Discover Our Services</h2>
-        <p>Explore a spectrum of development and DevOps services meticulously designed to streamline your workflow and elevate your software development processes.</p>
+    
+    <div class="section">
+      <div class="w-container">
+        <div class="w-row">
+          <div class="w-col w-col-4">
+            <div class="w-container portfolio-text left-up">
+              <h3>Proposal Re-Design</h3>
+              <div class="blueborder left"></div>
+              <p>They asked me for a re-design on her old website. They want something fresh, more clean, with color but with orange in first plan.&nbsp;Gagglon is a social shopping platform that allows buyers to lower prices by grouping or negotiate directly
+                with sellers. I was the interface designer of her project.</p>
+            </div>
+          </div>
+          <div class="w-col w-col-8 align-right">
+            <a class="w-inline-block" href="#">
+              <img src="http://www.iago-Mussel.pt/images/banner_gagglon.png" alt="5296490b3cf9afba680001c1_banner_gagglon.png">
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-</section>
-
-
-<!-- Contact Section -->
-<section id="contact" class="container my-5">
-    <div class="contact-content">
-        <h2>Contact Us</h2>
-        <p>Reach out to us to explore how HunterMussel can enhance the success of your projects. We eagerly anticipate your inquiry!</p>
+    <div class="section dark web">
+      <div class="w-container">
+        <div class="w-row">
+          <div class="w-col w-col-8">
+            <img src="http://www.iago-Mussel.pt/images/banner_cloudrecruit.png" alt="52d59a519ebabe192500011e_banner_cloudrecruit.png">
+          </div>
+          <div class="w-col w-col-4 portfolio-text">
+            <h3>CloudRecruit Interface</h3>
+            <div class="blueborder left"></div>
+            <p>CloudRecruit is an awesome project that are actually in growing up. I was the User Interface Designer in his "first round" of designs. They need the layout of home page, and the application pages (search page and chat page). This is the first
+              preview of her project, it's all that they need to show her project to others companys and get more partners to help them grow up.</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="contact-details">
-        <!-- Add a contact form or contact details here -->
+    <div class="section">
+      <div class="w-container">
+        <div class="w-row">
+          <div class="w-col w-col-4">
+            <div class="w-container portfolio-text left-up">
+              <h3>Backoffice Interface</h3>
+              <div class="blueborder left"></div>
+              <p>After a few months of development and thinking about that structure i have create this backoffice interface for one Portuguese company that will use this backoffice to connect all her works and her projects in one place here they can talk,
+                discuss, share, report and administrate all projects.</p>
+            </div>
+          </div>
+          <div class="w-col w-col-8 align-right">
+            <a class="w-inline-block" href="#">
+              <img src="http://www.iago-Mussel.pt/images/banner_backoffice.png" alt="52d59c4d7b9bfeb1010000c4_banner_backoffice.png">
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-</section>
-
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
-</html>
-
+    <div class="section bg-image" id="page-nav-about">
+      <div class="w-container hero-text about-text">
+        <h2>
+            I'm enthusiastic about fast API development, and I particularly enjoy using FastAPI</h2>
+        <div class="spacer"></div>
+        <h1>More important than one client happy is&nbsp;<br>you doing what&nbsp;you love!</h1>
+      </div>
+    </div>
+    <div class="section">
+      <div class="servicesheader">More about me</div>
+      <div class="w-container blue-tag-center">
+        <div>
+          <div class="blueborder"></div>
+        </div>
+      </div>
+      <div class="w-container">
+        <div class="w-row">
+          <div class="w-col w-col-4 imageme">
+            <img class="imageme" src="http://www.iago-Mussel.pt/images/mecircle.png" alt="52d4483b8bd64bd3060000d1_mecircle.png">
+          </div>
+          <div class="w-col w-col-4">
+            <div class="headerabout">Name</div>
+            <div class="answerabout">Iago Mussel</div>
+            <div class="headerabout">From</div>
+            <div class="answerabout">Aveiro - Portugal</div>
+            <div class="headerabout">Job</div>
+            <div class="answerabout">Freelancer</div>
+            <div class="textabout">Actually I worked as a Freelancer in Web and User Interface Design. My job is to create beautiful and functional interfaces for websites, apps and anything that involved interaction between human and digital.</div>
+          </div>
+          <div class="w-col w-col-4">
+            <div class="skillsblock">
+              <div class="skillstitle">NodeJS development</div>
+              <div class="skillsbg">
+                <div class="skillsbar _90"></div>
+              </div>
+            </div>
+            <div class="skillsblock">
+              <div class="skillstitle">Kubernets deployment</div>
+              <div class="skillsbg">
+                <div class="skillsbar _95"></div>
+              </div>
+            </div>
+            <div class="skillsblock">
+              <div class="skillstitle">Wireframing &amp; Mockuping</div>
+              <div class="skillsbg">
+                <div class="skillsbar _80"></div>
+              </div>
+            </div>
+            <div class="skillsblock">
+              <div class="skillstitle">xhtml &amp; CSS</div>
+              <div class="skillsbg">
+                <div class="skillsbar _30"></div>
+              </div>
+            </div>
+            <div class="skillsblock">
+              <div class="skillstitle">Aws Tools</div>
+              <div class="skillsbg">
+                <div class="skillsbar _65"></div>
+              </div>
+            </div>
+            <div class="skillsblock">
+              <div class="skillstitle">Continous integration</div>
+              <div class="skillsbg">
+                <div class="skillsbar _80"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section bottom" id="page-nav-contact">
+      <div class="w-container">
+        <div class="w-row">
+          <div class="w-col w-col-7">
+            <h1 class="h1-dark">Send me a message</h1>
+            <div class="blueborder left"></div>
+            <div class="w-form">
+              <form class="contact-form" name="email-form" data-name="Email Form">
+                <input class="w-input field" type="text" placeholder="Your name" name="name" data-name="Name" required="">
+                <input class="w-input field" type="text" placeholder="Email address" name="email" data-name="Email" required="">
+                <textarea class="w-input textfield" placeholder="How can we help you ?" required=""></textarea>
+                <input class="w-button button darkbutton" type="submit" value="Submit" data-wait="Please wait...">
+              </form>
+              <div class="w-form-done">
+                <p>Thank you! Your submission has been received!</p>
+              </div>
+              <div class="w-form-fail">
+                <p>Oops! Something went wrong while submitting the form :(</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-col w-col-5">
+            <h1 class="h1-dark">Contacts</h1>
+            <div class="blueborder left"></div>
+            <div class="blockbottom">Skype: <strong>jMussel44</strong>
+              <br>Email:&nbsp;<strong>geral@iago-Mussel.pt&nbsp;</strong>
+              <br>Phone:&nbsp;<strong>+351 914 740 704</strong>
+            </div>
+            <h1 class="h1-dark">Hire me</h1>
+            <div class="blueborder left"></div>
+            <div class="blockbottom">If you like my work and have some cool project to going on, feel free to contact me or give some impressions about that. I'm here to help you and turn your project amazing.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="w-clearfix footer">
+      <div class="footercontent">
+        <div class="bottomtext"><strong>IAGO MUSSEL</strong>&nbsp;. ALL RIGHTS RESERVED</div>
+      </div>
+      <a class="w-clearfix w-inline-block buttonbottom behance" href="#">
+        <img class="socialbottom" src="http://www.iago-Mussel.pt/images/1385694988_37-behance.png" width="25" alt="5297b30d6614a1bf0700009b_1385694988_37-behance.png">
+        <div class="w-hidden-tiny textbottom">Follow me on Behance</div>
+      </a>
+      <a class="w-clearfix w-inline-block buttonbottom dribbble mobile" href="#">
+        <img class="socialbottom" src="http://www.iago-Mussel.pt/images/dribbble.png" width="25" alt="5297b5856614a1bf070000a2_dribbble.png">
+        <div class="w-hidden-tiny textbottom">Follow me on Dribbble</div>
+      </a>
+    </footer>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/webflow.js"></script>
+  
+  <script id="hiddenlpsubmitdiv" style="display: none;"></script><script>try{for(var lastpass_iter=0; lastpass_iter < document.forms.length; lastpass_iter++){ var lastpass_f = document.forms[lastpass_iter]; if(typeof(lastpass_f.lpsubmitorig2)=="undefined"){ lastpass_f.lpsubmitorig2 = lastpass_f.submit; lastpass_f.submit = function(){ var form=this; var customEvent = document.createEvent("Event"); customEvent.initEvent("lpCustomEvent", true, true); var d = document.getElementById("hiddenlpsubmitdiv"); if (d) {for(var i = 0; i < document.forms.length; i++){ if(document.forms[i]==form){ d.innerText=i; } } d.dispatchEvent(customEvent); }form.lpsubmitorig2(); } } }}catch(e){}</script></body></html>
