--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 					<div class="row escuro">
 					  	<div class="col-sm-12 col-md-12" id="sobre">
-					  		<h1>Quem Sou Eu</h1>
+					  		<h1>Who Am I?</h1>
 					  		<div class="centralizar">
 					  			<div id="perfil-img"></div>
 					  		</div>
@@ -65,32 +65,33 @@
 
 				  	<div class="row claro">
 					  	<div class="col-sm-12 col-md-12" id="portifolio">
-					  		<h1>Portfólio</h1>
+					  		<h1>Portfolio</h1>
 					   		<div class="card-deck margin">
-							  	<div class="card">
-							  		<a href="#"><img src="img/proj-1.jpg" class="card-img-top"></a>
-								    <div class="card-body">
-								      	<h5 class="card-title">Projeto 1</h5>
-								      	<p class="card-text"></p>
-								    </div>
-							  	</div>
-							  	<div class="card">
-							    	<a href="#"><img src="img/proj-2.jpg" class="card-img-top"></a>
-							    	<div class="card-body">
-							      		<h5 class="card-title">Projeto 2</h5>
-							      		<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-							    	</div>
-							  	</div>
-							  	<div class="card">
-							    	<a href="#"><img src="img/proj-3.jpg" class="card-img-top"></a>
-							    	<div class="card-body">
-							      		<h5 class="card-title">Projeto 3</h5>
-							      		<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-							    	</div>
-							  	</div>
+								<div class="card">
+									<a href="#"><img src="img/proj-1.jpg" class="card-img-top"></a>
+									<div class="card-body">
+										<h5 class="card-title">Larodon</h5>
+										<p class="card-text">built a dental system with appointments using Node and Vue</p>
+									</div>
+								</div>
+								<div class="card">
+									<a href="#"><img src="img/proj-2.jpg" class="card-img-top"></a>
+									<div class="card-body">
+										<h5 class="card-title">Social Network</h5>
+										<p class="card-text">
+											I collaborated with the team to create and launch a social network app catering to horror enthusiasts. We utilized AWS to ensure robust security and high availability.</p>
+									</div>
+								</div>
+								<div class="card">
+									<a href="#"><img src="img/proj-3.jpg" class="card-img-top"></a>
+									<div class="card-body">
+										<h5 class="card-title">TechHub Connect</h5>
+										<p class="card-text">Developed an innovative collaboration platform, TechHub Connect, facilitating seamless communication and resource sharing among tech enthusiasts. The system is built using cutting-edge technologies for optimal performance and user experience.</p>					
+									</div>
+								</div>
 							</div>
 							<div class="centralizar">
-								<a href="projeto.html"><img width="80px" src="icones/plus1.png"></a>	  	
+								<a href="https://github.com/iagomussel/"><img width="80px" src="icones/plus1.png"></a>	  	
 							</div>
 
 						</div>
@@ -100,7 +101,7 @@
 
 					<div class="row escuro">
 					  	<div class="col-sm-12 col-md-12" id="habilidades">
-					  		<h1>Habilidades</h1>
+					  		<h1>Skills</h1>
 					  		<div class="row">
 							  	<div class="col-sm-6 ajuste-habil">
 							    	<div class="card">
@@ -168,19 +169,19 @@
 
 				  	<div class="row claro">
 				  		<div class="col-sm-12 col-md-8" id="contato">
-				  			<h1>Contato</h1>
+				  			<h1>Contact Me</h1>
 				  			<div class="centralizar ajuste-comentario">
 								<form id="frm" method="get" action="himmussel@gmail.com">
 								  	<div class="form-row">
 								    	<div class="form-group col-sm-12 col-md-6">
-								      		<input type="text" class="form-control" maxlength="20" placeholder="Nome" id="validationServer01" required>
+								      		<input type="text" class="form-control" maxlength="20" placeholder="Name" id="validationServer01" required>
 								    	</div>
 								    	
 								    	<div class="form-group col-sm-12 col-md-6">
-								      		<input type="text" class="form-control" id="validationServer03" placeholder="Email">
+								      		<input type="text" class="form-control" id="validationServer03" placeholder="Mail">
 								    	</div>
 								    	<div class="form-group col-sm-12 col-md-12">
-										  	<textarea class="form-control areatexto" id="validationServer05" aria-label="With textarea" rows="5" placeholder="Mensagem"></textarea>
+										  	<textarea class="form-control areatexto" id="validationServer05" aria-label="With textarea" rows="5" placeholder="Message"></textarea>
 										</div>
 								  	</div>
 								  	<input type="button" class="btn btn-info" style="width: 150px; height: 50px" value="Enviar">
@@ -191,23 +192,23 @@
 				  		<div class="col-sm-12 col-md-4 ajuste-contato">
 				  			<div id="social">
 					  			<div class="">
-						  			<h4>Local</h4>
+						  			<h4>Location</h4>
 						  			<p>Rio de Janeiro, RJ</p>
 						  			<p>Brasil</p>
 					  			</div>
 
 					  			<div class="">
-					  				<h4>Email</h4>
+					  				<h4>Mail</h4>
 					  				<p>himmussel@gmail.com</p>
 					  			</div>
 
 					  			<div class="">
-					  				<h4>Telefone</h4>
-					  				<p>(21) 995775689</p>
+					  				<h4>Phone number</h4>
+					  				<p>+55 (21) 995775689</p>
 					  			</div>
 
 					  			<div class="">
-					  				<h4>Social</h4>
+					  				<h4>Social Networks</h4>
 					  				<a href="https://www.facebook.com/iago.mussel" target="resource window"><img src="icones/face.png"></a>
 					  				<a href="https://www.linkedin.com/in/iago-mussel/" target="resource window"><img src="icones/link.png"></a>
 					  				<a href="https://www.instagram.com/himmussel/?hl=pt-br" target="resource window"><img src="icones/insta.png"></a>
@@ -220,7 +221,7 @@
 				  	<!--FOOTER-->
 				  	<div class="row escuro">
 				  		<div class="col-sm-12 col-md-12" id="rodape">
-				  			<p>© Iago Mussel - Desenvolvedor por paixão.</p>
+				  			<p>© Iago Mussel - Developer By Passion.</p>
 				  		</div>
 				  	</div>
 				</div>	
