--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 					<div class="row">
 						<div class="col-sm-12 col-md-12" id="introducao">
 							<div class="container">
-								<h1>Iago Mussel<br> 
-						        	<span class="txt-type" data-wait="3000" data-words='["Criandor", "Desenvolvendor", "Designer"]'></span>
-						      	</h1>	
-						      	<h2>Building Ideas</h2>		
+								<h1>
+									Iago Mussel <br/>
+									<span class="txt-type" data-wait="3000" data-words='["Developer", "DevOps Engineer", "Designer", "Machine Learning Enthusiast"]'></span>
+								</h1>
+								<h2>Building Ideas</h2>
 							</div>
 						</div>
 					</div>
