--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									</div>
 								</div>
 								<div class="card">
-									<a href="#"><img src="img/proj-3.jpg" class="card-img-top"></a>
+									<a href="#"><img src="img/proj-3.png" class="card-img-top"></a>
 									<div class="card-body">
 										<h5 class="card-title">TechHub Connect</h5>
 										<p class="card-text">Developed an innovative collaboration platform, TechHub Connect, facilitating seamless communication and resource sharing among tech enthusiasts. The system is built using cutting-edge technologies for optimal performance and user experience.</p>					
