--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Senior DevOps Professional with over a decade of experience, specializing in optimizing software, Infrastructure as Code (IaC), and robust CI/CD strategies. Proven track record in integrating third-party services and enhancing security protocols.">
+		<meta name="keywords" content="DevOps, Senior DevOps Professional, Software Optimization, Infrastructure as Code, IaC, CI/CD, Third-Party Integration, Security Protocols">
+		<meta name="author" content="Iago Mussel">
+	
+		<!-- Open Graph Meta Tags (for social media sharing) -->
+		<meta property="og:title" content="Application Developer">
+		<meta property="og:description" content="Senior DevOps Professional with over a decade of experience, specializing in optimizing software, Infrastructure as Code (IaC), and robust CI/CD strategies. Proven track record in integrating third-party services and enhancing security protocols.">
+		<meta property="og:image" content="https://huntermussel.com/img/iago.jpg">
+		<meta property="og:url" content="https://huntermussel.com">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/index.css">
