--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<meta property="og:description" content="Senior DevOps Professional with over a decade of experience, specializing in optimizing software, Infrastructure as Code (IaC), and robust CI/CD strategies. Proven track record in integrating third-party services and enhancing security protocols.">
 		<meta property="og:image" content="https://huntermussel.com/img/iago.jpg">
 		<meta property="og:url" content="https://huntermussel.com">
+
+		 <!-- Canonical link tag -->
+		 <link rel="canonical" href="https://huntermussel.com/">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/index.css">
@@ -20,7 +24,7 @@
 		crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		<script src="js/script.js"></script>
-		<title>Iago Mussel</title> 
+		<title>Iago Mussel | DevOps Engineer & Software Optimization Specialist</title> 
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -48,7 +52,7 @@
 						<div class="col-sm-12 col-md-12" id="introducao">
 							<div class="container">
 								<h1>
-									Iago Mussel <br/>
+									Iago Mussel | DevOps Engineer & Software Optimization Specialist <br/>
 									<span class="txt-type" data-wait="3000" data-words='["Developer", "DevOps Engineer", "Designer", "Machine Learning Enthusiast"]'></span>
 								</h1>
 								<h2>Building Ideas</h2>
@@ -61,7 +65,7 @@
 
 					<div class="row escuro">
 					  	<div class="col-sm-12 col-md-12" id="sobre">
-					  		<h1>Who Am I?</h1>
+					  		<h2>Who Am I?</h2>
 					  		<div class="centralizar">
 					  			<div id="perfil-img"></div>
 					  		</div>
@@ -75,7 +79,7 @@
 
 				  	<div class="row claro">
 					  	<div class="col-sm-12 col-md-12" id="portifolio">
-					  		<h1>Portfolio</h1>
+					  		<h2>Portfolio</h2>
 					   		<div class="card-deck margin">
 								<div class="card">
 									<a href="#"><img src="img/proj-1.jpg" class="card-img-top"></a>
@@ -111,7 +115,7 @@
 
 					<div class="row escuro">
 					  	<div class="col-sm-12 col-md-12" id="habilidades">
-					  		<h1>Skills</h1>
+					  		<h2>Skills</h2>
 					  		<div class="row">
 							  	<div class="col-sm-6 ajuste-habil">
 							    	<div class="card">
@@ -179,9 +183,9 @@
 
 				  	<div class="row claro">
 				  		<div class="col-sm-12 col-md-8" id="contato">
-				  			<h1>Contact Me</h1>
+				  			<h2>Contact Me</h2>
 				  			<div class="centralizar ajuste-comentario">
-								<form id="frm" method="get" action="himmussel@gmail.com">
+								<form id="frm" method="get" action="mailto:immussel@gmail.com">
 								  	<div class="form-row">
 								    	<div class="form-group col-sm-12 col-md-6">
 								      		<input type="text" class="form-control" maxlength="20" placeholder="Name" id="validationServer01" required>
