--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
 
 					  			<div class="">
 					  				<h4>Social Networks</h4>
-					  				<a href="https://www.facebook.com/iago.mussel" target="resource window"><img src="icones/face.png"></a>
-					  				<a href="https://www.linkedin.com/in/iago-mussel/" target="resource window"><img src="icones/link.png"></a>
-					  				<a href="https://www.instagram.com/himmussel/?hl=pt-br" target="resource window"><img src="icones/insta.png"></a>
-									<a href="https://github.com/iagomussel" target="resource window"><img src="icones/git.png"></a>
+					  				<a href="https://www.facebook.com/iago.mussel" target="resource window"><img src="icones/face.png" alt="facebook" /></a>
+					  				<a href="https://www.linkedin.com/in/iago-mussel/" target="resource window"><img src="icones/link.png" alt="linkedin" /></a>
+					  				<a href="https://www.instagram.com/himmussel/?hl=pt-br" target="resource window"><img src="icones/insta.png"  alt="instagram"/></a>
+									<a href="https://github.com/iagomussel" target="resource window"><img src="icones/git.png"  alt="github" /></a>
 								</div>
 					  		</div>
 				  		</div>
