--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:title" content="Application Developer">
 	<meta property="og:description"
 		content="Senior DevOps Professional with over a decade of experience, specializing in optimizing software, Infrastructure as Code (IaC), and robust CI/CD strategies. Proven track record in integrating third-party services and enhancing security protocols.">
-	<meta property="og:image" content="https://huntermussel.com/img/iago.jpg">
+	<meta property="og:image" content="https://huntermussel.com/img/iago.png">
 	<meta property="og:url" content="https://huntermussel.com">
 
 	<!-- Canonical link tag -->
