create cache and robots

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<meta name="keywords"
 		content="DevOps, Senior DevOps Professional, Software Optimization, Infrastructure as Code, IaC, CI/CD, Third-Party Integration, Security Protocols">
 	<meta name="author" content="Iago Mussel">
-
+	<meta http-equiv="cache-control" content="Public" />
+	<meta http-equiv="Expires" content="3600" />
 	<!-- Open Graph Meta Tags (for social media sharing) -->
 	<meta property="og:title" content="Application Developer">
 	<meta property="og:description"
