add alt for all images

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<div class="col-sm-12 col-md-3" id="menu">
 				<nav class="sidebar">
 					<ul>
-						<li><a class="scroll" href="#introducao"><img src="icones/intro.png"><span>Intro</span></a></li>
-						<li><a class="scroll" href="#sobre"><img src="icones/user.png"><span>About</span></a></li>
-						<li><a class="scroll" href="#portifolio"><img src="icones/projt.png"><span>Portfolio</span></a>
+						<li><a class="scroll" href="#introducao"><img src="icones/intro.png" alt="icon"><span>Intro</span></a></li>
+						<li><a class="scroll" href="#sobre"><img src="icones/user.png"  alt="icon"><span>About</span></a></li>
+						<li><a class="scroll" href="#portifolio"><img src="icones/projt.png" alt="icon"><span>Portfolio</span></a>
 						</li>
-						<li><a class="scroll" href="#habilidades"><img src="icones/code.png"><span>Skills</span></a>
+						<li><a class="scroll" href="#habilidades"><img src="icones/code.png" alt="icon"><span>Skills</span></a>
 						</li>
-						<li><a class="scroll" href="#contato"><img src="icones/contact.png"><span>Contact</span></a>
+						<li><a class="scroll" href="#contato"><img src="icones/contact.png" alt="icon"><span>Contact</span></a>
 						</li>
 					</ul>
 				</nav>
@@ -98,14 +98,14 @@
 						<h2>Portfolio</h2>
 						<div class="card-deck margin">
 							<div class="card">
-								<a href="#"><img src="img/proj-1.jpg" class="card-img-top"></a>
+								<a href="#"><img src="img/proj-1.jpg" class="card-img-top" alt="projeto 1"></a>
 								<div class="card-body">
 									<h5 class="card-title">Larodon</h5>
 									<p class="card-text">built a dental system with appointments using Node and Vue</p>
 								</div>
 							</div>
 							<div class="card">
-								<a href="#"><img src="img/proj-2.jpg" class="card-img-top"></a>
+								<a href="#"><img src="img/proj-2.jpg" class="card-img-top" alt="projeto 2"></a>
 								<div class="card-body">
 									<h5 class="card-title">Social Network</h5>
 									<p class="card-text">
@@ -115,7 +115,7 @@
 								</div>
 							</div>
 							<div class="card">
-								<a href="#"><img src="img/proj-3.png" class="card-img-top"></a>
+								<a href="#"><img src="img/proj-3.png" class="card-img-top" alt="projeto 3"></a>
 								<div class="card-body">
 									<h5 class="card-title">TechHub Connect</h5>
 									<p class="card-text">Developed an innovative collaboration platform, TechHub
@@ -126,7 +126,7 @@
 							</div>
 						</div>
 						<div class="centralizar">
-							<a href="https://github.com/iagomussel/"><img width="80px" src="icones/plus1.png"></a>
+							<a href="https://github.com/iagomussel/"><img width="80px" src="icones/plus1.png" alt="Plus icon"></a>
 						</div>
 
 					</div>
