improve meta desc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description"
-		content="Senior DevOps Professional with over a decade of experience, specializing in optimizing software, Infrastructure as Code (IaC), and robust CI/CD strategies. Proven track record in integrating third-party services and enhancing security protocols.">
+		content="Experienced DevOps Professional optimizing software, specializing in IaC, robust CI/CD, third-party integrations, and enhanced security protocols.">
 	<meta name="keywords"
 		content="DevOps, Senior DevOps Professional, Software Optimization, Infrastructure as Code, IaC, CI/CD, Third-Party Integration, Security Protocols">
 	<meta name="author" content="Iago Mussel">
@@ -13,7 +13,7 @@
 	<!-- Open Graph Meta Tags (for social media sharing) -->
 	<meta property="og:title" content="Application Developer">
 	<meta property="og:description"
-		content="Senior DevOps Professional with over a decade of experience, specializing in optimizing software, Infrastructure as Code (IaC), and robust CI/CD strategies. Proven track record in integrating third-party services and enhancing security protocols.">
+		content="Experienced DevOps Professional optimizing software, specializing in IaC, robust CI/CD, third-party integrations, and enhanced security protocols.">
 	<meta property="og:image" content="https://huntermussel.com/img/iago.png">
 	<meta property="og:url" content="https://huntermussel.com">
 
