--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						</li>
 					</ul>
 				</nav>
-				<i class="botao"><img id="iconeMenu" src="icones/menu.png"></i>
+				<i class="botao"><img id="iconeMenu" src="icones/menu.png" alt="menu icon"></i>
 			</div>
 		</div>
 
