--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 											aria-label="With textarea" rows="5" placeholder="Message"></textarea>
 									</div>
 								</div>
-								<input type="button" class="btn btn-info" style="width: 150px; height: 50px"
+								<input type="button" id="send_message_btn" class="btn btn-info"
 									value="Enviar" onclick="sendMessage()">
 							</form>
 						</div>
