--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
+	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 	<meta name="description"
 		content="Experienced DevOps Professional optimizing software, specializing in IaC, robust CI/CD, third-party integrations, and enhanced security protocols.">
 	<meta name="keywords"
