--- a/index.html
+++ b/index.html
@@ -340,6 +340,15 @@
 			$('#messageModal').modal('show');
 		}
 	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3E966RRK5F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3E966RRK5F');
+</script>
 </body>
 
 </html>
