add google analytics

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
         ]
       }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NENC1CBCTS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NENC1CBCTS');
+</script>
 </head>
 
 <body class="bg-gray-50">
