refactor index.html for SEO improvements, update routing in App.tsx, remove i18n integration, enhance Hero component, update Navbar with new links, redesign Plans component, and delete unused files

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
   <!-- Primary Meta Tags -->
-  <title data-i18n="meta.title">Hunter Mussel - Professional Software Development</title>
-  <meta name="title" content="Hunter Mussel - Professional Software Development" data-i18n="meta.title">
-  <meta name="description"
-    content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications." data-i18n="meta.description">
+  <title>Hunter Mussel - Professional Software Development</title>
+  <meta name="title" content="Hunter Mussel - Professional Software Development">
+  <meta name="description" content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications.">
+  
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -22,32 +22,28 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WX5PTVBW');</script>
   <!-- End Google Tag Manager -->
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://huntermussel.com/">
-  <meta property="og:title" content="Hunter Mussel - Professional Software Development" data-i18n="meta.title">
-  <meta property="og:description"
-    content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications." data-i18n="meta.description">
-  <meta property="og:image"
-    content="https://media.licdn.com/dms/image/v2/C4D03AQH8wFMt-MwNTQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1647061414600?e=1740009600&v=beta&t=EsbTcu_g03AdKJuL_etH6uRUAmEbLEOrCSQiSMD06RQ">
+  <meta property="og:title" content="Hunter Mussel - Professional Software Development">
+  <meta property="og:description" content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications.">
+  <meta property="og:image" content="https://media.licdn.com/dms/image/v2/C4D03AQH8wFMt-MwNTQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1647061414600?e=1740009600&v=beta&t=EsbTcu_g03AdKJuL_etH6uRUAmEbLEOrCSQiSMD06RQ">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://huntermussel.com/">
-  <meta property="twitter:title" content="Hunter Mussel - Professional Software Development" data-i18n="meta.title">
-  <meta property="twitter:description"
-    content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications." data-i18n="meta.description">
-  <meta property="twitter:image"
-    content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
+  <meta property="twitter:title" content="Hunter Mussel - Professional Software Development">
+  <meta property="twitter:description" content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications.">
+  <meta property="twitter:image" content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
 
   <!-- Keywords -->
-  <meta name="keywords"
-    content="software development, web development, devops, aws cloud, mobile applications, react development, node.js development, full stack development" data-i18n="meta.keywords">
+  <meta name="keywords" content="software development, web development, devops, aws cloud, mobile applications, react development, node.js development, full stack development">
 
   <!-- Additional SEO Meta Tags -->
   <meta name="author" content="Iago Mussel">
   <meta name="robots" content="index, follow">
-  <meta name="language" content="en" data-i18n="meta.language">
+  <meta name="language" content="en">
   <meta name="revisit-after" content="7 days">
 
   <!-- Structured Data -->
@@ -98,17 +94,6 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WX5PTVBW" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const i18n = window.i18next;
-      const elements = document.querySelectorAll('[data-i18n]');
-      elements.forEach(el => {
-        const key = el.getAttribute('data-i18n');
-        el.textContent = i18n.t(key);
-        el.setAttribute('content', i18n.t(key));
-      });
-    });
-  </script>
 </body>
 
 </html>
