Update index.html for SEO enhancements, modify logo SVG for improved design, refactor ContactForm and Plans components to remove i18n integration, and update text content across various components for clarity and consistency. Remove unused LanguageSwitcher component.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
   <!-- Primary Meta Tags -->
-  <title>Hunter Mussel - Professional Software Development</title>
-  <meta name="title" content="Hunter Mussel - Professional Software Development">
-  <meta name="description" content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications.">
+  <title>HunterMussel - Professional Software Development</title>
+  <meta name="title" content="HunterMussel - Professional Software Development">
+  <meta name="description" content="Premier software house delivering innovative, high-quality software solutions for businesses across various industries.">
   
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
@@ -26,22 +26,22 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://huntermussel.com/">
-  <meta property="og:title" content="Hunter Mussel - Professional Software Development">
-  <meta property="og:description" content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications.">
-  <meta property="og:image" content="https://media.licdn.com/dms/image/v2/C4D03AQH8wFMt-MwNTQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1647061414600?e=1740009600&v=beta&t=EsbTcu_g03AdKJuL_etH6uRUAmEbLEOrCSQiSMD06RQ">
+  <meta property="og:title" content="HunterMussel - Professional Software Development">
+  <meta property="og:description" content="Premier software house delivering innovative, high-quality software solutions for businesses across various industries.">
+  <meta property="og:image" content="/assets/images/hero.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://huntermussel.com/">
-  <meta property="twitter:title" content="Hunter Mussel - Professional Software Development">
-  <meta property="twitter:description" content="Over 18 years of experience in software development. Specialists in web development, DevOps, AWS Cloud, and mobile applications.">
-  <meta property="twitter:image" content="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
+  <meta property="twitter:title" content="HunterMussel - Professional Software Development">
+  <meta property="twitter:description" content="Premier software house delivering innovative, high-quality software solutions for businesses across various industries.">
+  <meta property="twitter:image" content="/assets/images/hero.jpg">
 
   <!-- Keywords -->
-  <meta name="keywords" content="software development, web development, devops, aws cloud, mobile applications, react development, node.js development, full stack development">
+  <meta name="keywords" content="software development, web development, mobile applications, devops, cloud solutions, custom software, software house, enterprise applications">
 
   <!-- Additional SEO Meta Tags -->
-  <meta name="author" content="Iago Mussel">
+  <meta name="author" content="HunterMussel">
   <meta name="robots" content="index, follow">
   <meta name="language" content="en">
   <meta name="revisit-after" content="7 days">
@@ -50,29 +50,26 @@
   <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "ProfessionalService",
-        "name": "Hunter Mussel",
-        "image": "https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80",
-        "description": "Desenvolvimento de software profissional com mais de 18 anos de experiência.",
+        "@type": "Organization",
+        "name": "HunterMussel",
+        "url": "https://huntermussel.com",
+        "logo": "/assets/images/logo.svg",
+        "image": "/assets/images/hero.jpg",
+        "description": "Premier software house delivering innovative, high-quality software solutions for businesses across various industries.",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Rio de Janeiro",
           "addressRegion": "RJ",
           "addressCountry": "BR"
         },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": "-22.9068",
-          "longitude": "-43.1729"
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+55-21-99577-5689",
+          "contactType": "Customer Service"
         },
-        "url": "https://huntermussel.com",
-        "telephone": "+55-21-99577-5689",
-        "priceRange": "$$",
-        "openingHours": "Mo-Fr 09:00-18:00",
         "sameAs": [
           "https://linkedin.com/company/huntermussel",
-          "https://github.com/huntermussel",
-          "https://twitter.com/huntermussel"
+          "https://github.com/huntermussel"
         ]
       }
     </script>
