Add async Google Ads script to index.html and remove odontomaster subproject

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   <meta name="robots" content="index, follow">
   <meta name="language" content="en">
   <meta name="revisit-after" content="7 days">
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5801343878244458"
+  crossorigin="anonymous"></script>
   <!-- Structured Data -->
   <script type="application/ld+json">
       {
