Localize lead capture flows for AWS Audit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
   <!-- Primary Meta Tags -->
-  <title>HunterMussel - Professional Software Development</title>
-  <meta name="title" content="HunterMussel - Professional Software Development">
-  <meta name="description" content="Premier software house delivering innovative, high-quality software solutions for businesses across various industries.">
+  <title>Hunter Mussel - Auditoria de Conta AWS em 72h</title>
+  <meta name="title" content="Hunter Mussel - Auditoria de Conta AWS em 72h">
+  <meta name="description" content="Reserve o AWS Audit Accelerator: auditoria completa da sua conta AWS com relatório executivo bilíngue, plano 30-60-90 dias e reunião com líder técnico.">
   
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
@@ -26,24 +26,24 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://huntermussel.com/">
-  <meta property="og:title" content="HunterMussel - Professional Software Development">
-  <meta property="og:description" content="Premier software house delivering innovative, high-quality software solutions for businesses across various industries.">
+  <meta property="og:title" content="Hunter Mussel - Auditoria de Conta AWS em 72h">
+  <meta property="og:description" content="AWS Audit Accelerator: diagnóstico Well-Architected, savings de FinOps e workshop executivo para CFOs e CTOs.">
   <meta property="og:image" content="/assets/images/hero.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://huntermussel.com/">
-  <meta property="twitter:title" content="HunterMussel - Professional Software Development">
-  <meta property="twitter:description" content="Premier software house delivering innovative, high-quality software solutions for businesses across various industries.">
+  <meta property="twitter:title" content="Hunter Mussel - Auditoria de Conta AWS em 72h">
+  <meta property="twitter:description" content="Auditoria AWS com relatório executivo bilíngue, roadmap 30-60-90 dias e reunião com líder técnico.">
   <meta property="twitter:image" content="/assets/images/hero.jpg">
 
   <!-- Keywords -->
-  <meta name="keywords" content="software development, web development, mobile applications, devops, cloud solutions, custom software, software house, enterprise applications">
+  <meta name="keywords" content="auditoria aws, aws audit accelerator, finops, governança cloud, relatório executivo aws, hunter mussel">
 
   <!-- Additional SEO Meta Tags -->
   <meta name="author" content="HunterMussel">
   <meta name="robots" content="index, follow">
-  <meta name="language" content="en">
+  <meta name="language" content="pt-BR">
   <meta name="revisit-after" content="7 days">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5801343878244458"
   crossorigin="anonymous"></script>
@@ -52,11 +52,11 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "HunterMussel",
+        "name": "Hunter Mussel",
         "url": "https://huntermussel.com",
         "logo": "/assets/images/logo.svg",
         "image": "/assets/images/hero.jpg",
-        "description": "Premier software house delivering innovative, high-quality software solutions for businesses across various industries.",
+        "description": "Hunter Mussel entrega o AWS Audit Accelerator: auditoria completa da conta AWS com relatório executivo bilíngue e workshop com líder técnico.",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Rio de Janeiro",
@@ -66,7 +66,7 @@
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+55-21-99577-5689",
-          "contactType": "Customer Service"
+          "contactType": "Sales"
         },
         "sameAs": [
           "https://linkedin.com/company/huntermussel",
